# virtrigaud-website

./: .gitignore  BUILD.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  crd-ref-docs-config.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
src/: index.md
src/api-reference/: cli.md  metrics.md
src/development/: building-locally.md  contributing.md  index.md  providers.md  testing-locally.md
src/examples/: complete-example.yaml  disk-sizing-examples.yaml  graceful-shutdown-examples.yaml  index.md  libvirt-advanced-example.yaml  libvirt-complete-example.yaml  multi-provider-example.yaml  nested-virtualization.yaml  provider-libvirt.yaml  provider-vsphere.yaml  proxmox-complete-example.yaml  v021-feature-showcase.yaml  vm-ubuntu-small.yaml  vmclass-small.yaml  vmimage-ubuntu.yaml  vmmigration-advanced.yaml  vmmigration-basic.yaml  vmmigration-nfs.yaml  vmmigration-s3.yaml  vmnetwork-app.yaml  vsphere-advanced-example.yaml  vsphere-hardware-versions.yaml
src/getting-started/: basic-vm-example.md  helm-crd-upgrades.md  index.md  install-helm-only.md
src/guides/: index.md
src/migration/: api-reference.md  user-guide.md  vm-migration-guide.md
src/operations/: index.md  libvirt-host-prepare.md  observability.md  resilience.md  security.md  upgrade.md  vsphere-hardware-version.md
src/providers/: libvirt.md  providers-capabilities.md  proxmox.md  tutorial.md  versioning.md  vsphere.md
src/references/: catalog.md  cli-tools.md  crds.md  generated-crd-docs.md  grpc-api.md
tools/: buf.gen.docs.yaml  crd-ref-docs-config.yaml
(+26 files in other folders)
