[tool.poetry]
name = "virtrigaud-docs"
version = "0.2.3"
description = "VirtRigaud Documentation Site"
authors = ["William Rizzo", "Erick Bourgeois", "VirtRigaud Contributors"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.3"
mkdocs-material-extensions = "^1.3.1"
pymdown-extensions = "^10.7"
mkdocs-minify-plugin = "^0.8.0"
mkdocs-redirects = "^1.2.1"
mkdocs-git-revision-date-localized-plugin = "^1.2.4"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
